--- a/public/index.html
+++ b/public/index.html
@@ -795,6 +795,15 @@ It will not impact the appearance and can give developers a lot of support :)
         </div>
     
 </footer>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?ba7483bc78f876d2a1780fc963dff0f6";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 
 
                     <!-- Import File -->
